# kuka-youbot-description

./: README.md  package.xml
robots/: youbot.urdf.xacro
