<?xml version="1.0"?>
<package>
  <name>youbot_description</name>
  <version>0.8.1</version>
  <description>Robot descriptions in form of URDF files and meshes</description>

  <author email="frederik.hegger@h-brs.de">Frederik Heger</author> -->
  <maintainer email="nss.nikolas@gmail.com">Nikolas Semenov</maintainer>
  
  <license>GPLv3</license>

  <!--url type="website">http://github.com/youbot/youbot_description</url-->
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
